--- a/Beats/Beats/web/hackathon/Patient.html
+++ b/Beats/Beats/web/hackathon/Patient.html
@@ -171,10 +171,11 @@
 	<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mockjax/1.6.2/jquery.mockjax.min.js"></script>
-	<script type="text/javascript" src='https://maps.google.com/maps/api/js?sensor=false'></script>
+        <script type="text/javascript" src='https://maps.google.com/maps/api/js?v=3&key=AIzaSyBGCIVeM9AN1XA2SQmfvTljXmvgnEN7lpU&sensor=false'></script>
     <script src="scripts/locationpicker.jquery.min.js"></script>
     <script src="scripts/bootstrap-datepicker.js"></script>
 	<script type="text/javascript" src="scripts/patientScripts.js"></script>
 	<script type="text/javascript" src="scripts/common.js"></script>
+        <script type="text/javascript" src="scripts/config.js"></script>
 </body>
 </html>
